Review of ES5 and ES6. Class vs Prototype Inheritance

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
   <footer>
     Footer
   </footer>
-  <script>
-    document.getElementById("myBtn").addEventListener("click", function() {
-      alert("I was just Clicked!");
-    });
+  <script src="es6-classes.js">
+  
   </script>
 </html>
