Async/Await and Fetch API Practice

--- a/index.html
+++ b/index.html
@@ -5,29 +5,14 @@
   <body>
     <h1>Title</h1>
     <div id="main_container">
-      <h4>
-        Hello
-      </h4>
+      <img id="api_element"></img>
     </div>
-    <table>
-      <th>Head</th>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-      </tbody>
-    </table>
-    <button id="myBtn">Click Me</button>
+    
   </body>
   <footer>
     Footer
   </footer>
-  <script src="es6-classes.js">
+  <script src="promise-practice.js">
   
   </script>
 </html>
